@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2015-2025  Hybird
+#    Copyright (C) 2015-2026  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -45,6 +45,8 @@ class DocumentsConfig(CremeAppConfig):
         action_registry.register_instance_actions(
             actions.ExploreFolderAction,
             actions.DownloadAction,
+        ).register_bulk_actions(
+            actions.BulkDownloadAction,
         )
 
     def register_bricks(self, brick_registry):
