@@ -30,6 +30,8 @@
             - The CustomFields can now get:
                 - a description, which is used as help text in forms.
                 - a default value, which is used as initial value in creation forms.
+        * Documents :
+            - You can now download several Documents at once, as a .zip archive.
         * Billing :
             - Invoices, Quotes & Sales Order got a "card" hat-block, which is used by default by new installations.
             - You can now export several Invoices or Quotes at once, as a .zip archive.
